# Ookala

./: .hgsub  .hgsubstate  AUTHORS  COPYING  INSTALL  Makefile.am  README  README.md  aclocal.m4  configure.in
icons/: 709_bad.xpm  709_displaysetup.xpm  709_gamma.xpm  709_good.xpm  check-mon-no.xpm  check-mon-yes.xpm
rpm/: ookala-mcf.spec
scripts/: omcf-init  ookala_manual_build-K10A.sh  ookala_manual_build.sh
src/: Makefile.am
src/apps/: Makefile.am
src/apps/hpdc_util/: Makefile.am  main.cpp
src/apps/read_sensor/: Makefile.am  Makefile.am.Chroma5  Makefile.am.i1D2HPDC  README  main.cpp  main.cpp.Chroma5  main.cpp.ExampleSensor  main.cpp.i1D2HPDC
src/apps/ucal/: CalibChecker.cpp  CalibChecker.h  Events.h  Makefile.am  SessionManage.cpp  SessionManage.h  SignalHandler.cpp  SignalHandler.h  WxIconCtrl.cpp  WxIconCtrl.h  default_icon.xpm  main.cpp  ucal.xml.sample
src/docs/omcf_arch/: Makefile  chains.tex  copyright.tex  dict.tex  errors.tex  gui.tex  introduction.tex  notes  omcf_arch.tex  registration.tex  savior.tex  sensor.tex
src/libookala/: Color.cpp  Color.h  DataSavior.cpp  DataSavior.h  Ddc.cpp  Ddc.h  Dict.cpp  Dict.h  DictHash.cpp  DictHash.h  Interpolate.cpp  Interpolate.h  Makefile.am  Mutex.cpp  Mutex.h  Plugin.cpp  Plugin.h  PluginChain.cpp  PluginChain.h  PluginRegistry.cpp  PluginRegistry.h  Sensor.cpp  Sensor.h  Types.h  Ui.cpp  Ui.h  wxUtils.h
src/plugins/: Makefile.am
src/plugins/Chroma5/: Chroma5.cpp  Chroma5.h  Makefile.am  README
src/plugins/DevI2c/: DevI2c.cpp  DevI2c.h  Makefile.am
src/plugins/DreamColor/: DreamColorCalib.cpp  DreamColorCalib.h  DreamColorCalibRecord.cpp  DreamColorCalibRecord.h  DreamColorCalibrationData.cpp  DreamColorCalibrationData.h  DreamColorCtrl.cpp  DreamColorCtrl.h  DreamColorSpaceInfo.cpp  DreamColorSpaceInfo.h  Makefile.am
src/plugins/ExampleSensor/: ExampleSensor.cpp  ExampleSensor.h  Makefile.am  README
src/plugins/K10A/: K10A.cpp  K10A.h  Makefile.am
src/plugins/WsLut/: Makefile.am  WsLut.cpp  WsLut.h
src/plugins/WxBasicGui/: GamutPlot.cpp  GamutPlot.h  Makefile.am  SpectralLocus.h  WxBasicGui.cpp  WxBasicGui.h
src/plugins/WxDreamColorCalib/: Makefile.am  WxDreamColorCalib.cpp  WxDreamColorCalib.h
src/plugins/WxLutSweep/: Makefile.am  WxLutSweep.cpp  WxLutSweep.h
src/plugins/WxSensorPrep/: Makefile.am  WxSensorPrep.cpp  WxSensorPrep.h
src/plugins/i1D2HPDC/: Makefile.am  README
