
## Process this file with automake to produce Makefile.in

INCLUDES    = @LIBXML2_CFLAGS@
LDADD       = @LIBXML2_LIBS@

lib_LTLIBRARIES = libookala.la

libookala_la_SOURCES = \
	Color.cpp         \
	Color.h           \
	DataSavior.cpp    \
	DataSavior.h      \
	Ddc.cpp           \
	Ddc.h             \
	Dict.cpp          \
	Dict.h            \
	DictHash.cpp      \
    DictHash.h        \
	Interpolate.cpp   \
	Interpolate.h     \
	Mutex.cpp         \
	Mutex.h           \
	Plugin.cpp        \
	PluginChain.cpp   \
	PluginChain.h     \
	Plugin.h          \
	PluginRegistry.cpp\
	PluginRegistry.h  \
	Sensor.cpp        \
	Sensor.h          \
	Types.h           \
	Ui.cpp            \
	Ui.h              


