
## Process this file with automake to produce Makefile.in

SUBDIRS =                    \
		Chroma5            \
		DevI2c             \
		DreamColor         \
		i1D2HPDC           \
   		WsLut              \
	        WxBasicGui         \
		WxDreamColorCalib  \
		WxLutSweep         \
		WxSensorPrep       \
		ExampleSensor

